--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         </h1>
         <ul>
             <li><a href="recipes/paprikash.html">Chicken Paprikash</a></li>
+            <li><a href="recipes/chilaquiles.html">Chilaquiles</li>
         </ul>
     </body>
 
